feat(backend): manufacturers (#11)
* feat: initial work on manufacturers

* chore: prepare migrations

* feat: add `PUT /v1/manufacturer/{id}`

* feat: add `PATCH /v1/manufacturer/{id}`

Currently unhappy with how this works. Lots of duplication, lots of
boilerplate.

* fix: force consumption of old Manufacturer

* chore: update OpenApi schema

* chore: prepare sqlx statements

* feat: add database_macros crate for de-boilerplating

* chore: update openapi schema

* feat(manufacturer): add created_at and created_by columns

* chore: de-duplicate PatchField
